--- a/css/responsive.css
+++ b/css/responsive.css
@@ -15,49 +15,291 @@
 /* Mobile Phone Screen Media */
 
 @media (max-width: 768px){
+
+	p {
+		font: normal 10px 'Flamenco', cursive;
+		font-weight: 600;
+	}
+
+	h1,h2,h3,h4,h5,h6 { color: #767676;}
+
+	h1 {
+		font-size: 48px;
+		line-height: 50px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+	}
+
+	h2 {
+		font-size: 40px;
+		line-height: 38px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		margin: 0;
+	}
+
+	h3 {
+		font-size: 30px;
+		line-height: 32px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+		margin: 0;
+	}
+
+
+	h4 {
+		font-size: 24px;
+		line-height: 26px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+		}
+
+	h5 {
+		font-size: 20px;
+		line-height: 22px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+		margin: 0;
+		text-decoration: none;
+	}
+
 	
-.single_special_img img{
-	width:100%;
-}
 
-.single_contact{
-	text-align:center;
-	color:#3c3c3c;
-}
-.contact_form_area{
-	color:#3c3c3c;
-}
-.contact_form_area h3{
-	text-align:center;
-	margin-bottom:0;
-	color:#3c3c3c;
-}
-.form-control {
-    border: 0px solid transparent;
-    font-size: 16px;
-    font-family: 'Muli', sans-serif;
-    height: 45px;
-    border-bottom: 1px solid #ddd;
-    background-color: rgba(255, 255, 255, 0);
-    border-radius: 0;
-    -webkit-box-shadow: 0;
-    box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
-}
+	h6 {
+		font-size: 14px;
+		line-height: 14px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+		margin: 0;
+		text-decoration: none;
+	}
+	section {
+	  height: 100%;
+	  width: 100%;
+
+	}
+
+	.octo_nav {z-index:3;width:100%;display:none;right:0; opacity: 0.9;}
 
 
-.single_contact {
-    margin-bottom: 40px;
-    margin-left: 10px;
-}
-.single_contact h5{
-	color:#3c3c3c;
-}
-
-.single_footer{
-	text-align:center;
-}
-
+	.sections {
+	    padding-top: 20px;
+	    padding-bottom: 10px;
+	    position: relative;
+	    overflow: hidden;
 		
+	}
+	.banner .scroll_btn {
+		display: none;
+	}
+	.special_background .scroll_btn {
+		display: none;
+	}
+	.markt_background .scroll_btn {
+		display: none;
+	}
+
+	.about_background .scroll_btn {
+		display: none;
+	}
+	.team_background .scroll_btn {
+		display: none;
+	}
+	.separator{
+		background:url(../images/squiggly_line.png) no-repeat center center;
+		overflow:hidden;
+		padding:8px 0px 8px 0px;
+	}
+
+	.separator_black{
+		background:url(../images/squiggly_line_black.png) no-repeat center center;
+		overflow:hidden;
+		padding:8px 0px 8px 0px;
+	}
+
+	.single_banner_text p{
+		font-size:28px;
+		color:#ffff;
+		font-weight: 600;
+	}
+	.main_banner_area{
+		padding:150px 0px;
+		overflow:hidden;
+	}
+		
+	.head_title{
+		padding-bottom:30px;
+	}
+
+	.single_abouts p{ 
+		font-size:28px;
+		color:#ffff;
+		font-weight: 600;
+	}
+
+	.single_abouts img{ 
+		width: 35vw;
+		height: auto;
+		padding-top: 30px;
+	}
+
+	.special_background {
+		background-image: none;
+		
+	}
+
+
+	.main_special{
+	    padding-bottom: 10px;
+	    overflow: hidden;
+	   
+		
+	}
+
+	.single_special p{ 
+		font-size:28px;
+		color:#ffff;
+		font-weight: 600;
+	}
+	.main_special h6{ 
+		font-size: 10px;
+		font-weight: 600;
+		font-family: 'Gruppo', cursive;
+		text-transform: uppercase;
+		margin: 0;
+		text-decoration: none;
+	}
+
+	.padding_16 {
+		padding-left: 6px;
+		padding-right: 6px;
+	}
+
+	.padding_left_35{
+		padding-left: 0px;
+	}
+	.octo-padding-84{padding-top:0px!important;padding-bottom:0px!important}
+
+	.col-sm-1 {
+		width: 350px;
+		vertical-align: middle;
+	}
+	.team-scroll {
+		height: 100%;
+		
+
+
+	}
+	.demo{
+	width:20px;
+	height: auto;
+	
+	}
+	.demo img{
+		width:45px;
+		height: auto;
+		
+	}
+	.team_circle {
+		height:50px;
+		width: auto;
+		float: right;
+	}
+	.team_circle {
+		height:50px;
+		float: center;
+	}
+	.single_team p{ 
+		font-size:28px;
+		color:#ffff;
+		font-weight: 600;
+	}
+	.single_special_img img{
+		width:100%;
+	}
+
+	.single_contact{
+		text-align:center;
+		color:#3c3c3c;
+	}
+	.contact_form_area{
+		color:#3c3c3c;
+	}
+	.contact_form_area h3{
+		text-align:center;
+		margin-bottom:0;
+		color:#3c3c3c;
+	}
+	.form-control {
+	    border: 0px solid transparent;
+	    font-size: 16px;
+	    font-family:  'Gruppo', cursive;
+	    height: 45px;
+	    border-bottom: 1px solid #ddd;
+	    background-color: rgba(255, 255, 255, 0);
+	    border-radius: 0;
+	    -webkit-box-shadow: 0;
+	    box-shadow: inset 0 0px 0px rgba(0,0,0,0.075);
+	}
+
+	.footer {
+		height: 100%;
+	}
+
+	
+	.single_contact {
+	    margin-bottom: 40px;
+	    margin-left: 10px;
+	}
+	.single_contact h5{
+		color:#3c3c3c;
+	}
+
+	.single_footer{
+		text-align:center;
+	}
+
+	footer p{
+		font-size: 12px;
+	}
+
+	.octo-slideshow img{
+		height: auto; 
+		width: 400px;
+	}
+	.contact_row{
+		position: absolute;
+	}
+		
+	.margin_left_15 {
+		margin-left: 0px;
+	}
+
+	.margin_right_15 {
+		margin-right: 0px;
+	}	
+
+	.scrollup {
+		width: 30px;
+		height: 30px;
+		border-radius: 15px;
+		opacity: .3;
+		position: fixed;
+		bottom: 60px;
+		right: 5px;
+		color: #fff;
+		cursor: pointer;
+		background-color: #000;
+		z-index: 1000;
+		transition: opacity .5s, background-color .5s;
+		-moz-transition: opacity .5s, background-color .5s;
+		-webkit-transition: opacity .5s, background-color .5s;
+	}
 }
 
 /* Mobile Phone Screen Media */
